# m-lim

./: .gitignore  .gitmodules  CLAUDE.md  PROGRESS.md  README.md  SPEC.md  build  harness-state.json
M-LIM/: CMakeLists.txt  README.md
M-LIM/presets/: Default.xml
M-LIM/presets/Broadcast/: EBU_R128.xml  Podcast.xml  Streaming.xml
M-LIM/presets/Mastering/: Dynamic_Master.xml  Loud_Master.xml  Transparent_Master.xml  Wall_of_Sound.xml
M-LIM/presets/Mixing/: Bus_Glue.xml  Drum_Bus.xml  Vocal_Limiter.xml
M-LIM/screenshots/: audit-wave21-rmse-results.txt  rmse-after-task-475.txt  sweep41-rmse-results.txt  task-256-rmse-results.txt  task-273-rmse-results.txt  task-303-rmse-results.txt  task-358-rmse-results.txt  task-365-rmse-results.txt  task-366-rmse-results.txt  task-369-rmse-results.txt  task-370-rmse-results.txt  task-371-rmse-results.txt  task-372-rmse-results.txt  task-373-rmse-results.txt  task-377-rmse-results.txt  task-378-rmse-results.txt  task-379-rmse-results.txt  task-380-rmse-results.txt  task-381-rmse-results.txt  task-383-rmse-results.txt  task-388-rmse-results.txt  task-389-rmse-results.txt  task-390-rmse-results.txt  task-391-rmse-results.txt  task-392-rmse-results.txt  task-393-rmse-results.txt  task-396-rmse-results.txt  task-404-rmse-results.txt  task-408-rmse-results.txt  task-409-rmse-results.txt  task-499-rmse-results.txt
M-LIM/src/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
M-LIM/src/dsp/: DCFilter.cpp  DCFilter.h  Dither.cpp  Dither.h  DspUtil.h  LevelingLimiter.cpp  LevelingLimiter.h  LimiterAlgorithm.h  LimiterEngine.cpp  LimiterEngine.h  LoudnessMeter.cpp  LoudnessMeter.h  MeterData.h  Oversampler.cpp  Oversampler.h  SidechainFilter.cpp  SidechainFilter.h  TransientLimiter.cpp  TransientLimiter.h  TruePeakDetector.cpp  TruePeakDetector.h
M-LIM/src/state/: ABState.cpp  ABState.h  PresetManager.cpp  PresetManager.h  UndoManager.cpp  UndoManager.h
M-LIM/src/ui/: AlgorithmSelector.cpp  AlgorithmSelector.h  Colours.h  ControlStrip.cpp  ControlStrip.h  GainReductionMeter.cpp  GainReductionMeter.h  LevelMeter.cpp  LevelMeter.h  LookAndFeel.cpp  LookAndFeel.h  LoudnessPanel.cpp  LoudnessPanel.h  RotaryKnob.cpp  RotaryKnob.h  TopBar.cpp  TopBar.h  WaveformDisplay.cpp  WaveformDisplay.h
M-LIM/tasks/active/: worker-1--258-waveform-mode-label-hide-when-not-hovered.md
M-LIM/tasks/needs-grooming/: add-gain-knob-to-control-strip.md  add-input-meter-blue-tint.md  add-loudness-histogram-idle-bars.md  add-reset-methods-to-dither-and-sidechainfilter.md  brighten-gr-meter-track-background.md  brighten-input-meter-idle-gradient.md  brighten-waveform-lower-idle-gradient.md  control-strip-needs-blue-tint-increase.md  darken-control-strip-top-gradient.md  darken-loudness-histogram-gradient.md  darken-loudness-panel-background.md  darken-loudness-panel-readout-background.md  darken-output-meter-idle-to-near-black.md  darken-right-panel-overall-brightness.md  darken-status-bar-background.md  darken-waveform-upper-gradient.md  enlarge-rotary-knobs-to-match-reference.md  fix-channel-link-parameter-scaling-bug.md  fix-leveling-limiter-scalar-simd-clamp-divergence.md  fix-output-meter-excessive-idle-brightness.md  increase-gr-meter-idle-brightness.md  increase-output-meter-idle-blue-fill.md  increase-waveform-idle-blue-saturation.md  input-meter-needs-waveform-overlap-appearance.md  input-meter-top-too-bright-should-be-dark.md  output-meter-needs-led-segment-styling.md  reduce-output-meter-width.md  remove-dead-kMinGaindB-constant-leveling-limiter.md  remove-dynamic-enhance-dead-field.md  replace-juce-jmax-with-std-max-in-limiter-engine.md  right-panel-dbscale-range-mismatch.md  split-lockfreefifo-out-of-meterdata-header.md  style-selector-dropdown-mode.md  suppress-standalone-yellow-warning-banner.md  top-bar-too-light-needs-dark-gradient.md  waveform-center-brightness-gap.md
M-LIM/tasks/pending/: 195-loudness-meter-mono-lra-edge-cases.md  196-limiter-engine-assertion-and-edge-cases.md  197-oversampler-amplitude-latency-tests.md  198-transient-leveling-parameter-range-tests.md  199-undo-manager-edge-cases.md  200-ab-state-edge-cases.md  201-dc-filter-dither-edge-cases.md  202-sidechain-filter-edge-cases.md  203-preset-manager-navigation-edge-cases.md  204-algorithm-selector-single-button-style.md  205-advanced-vertical-side-tab.md  206-knob-face-flat-disc-appearance.md  207-level-meter-segmented-bar-appearance.md  208-waveform-scale-labels-dbfs-mapping.md  209-large-lufs-output-readout.md  257-true-peak-status-indicator-style.md  259-loudness-panel-pause-mode-buttons-placement.md  265-waveform-scale-strip-right-side-overlay.md  270-waveform-scale-strip-right-side-overlay.md  271-level-meter-track-segment-texture.md  272-rmse-re-measure-post-visual-tasks.md
M-LIM/tests/: CMakeLists.txt  alloc_tracking.h  test_main.cpp
M-LIM/tests/catch2/: catch.hpp
M-LIM/tests/dsp/: test_dc_filter.cpp  test_dither.cpp  test_dsp_edge_cases.cpp  test_dsp_util.cpp  test_leveling_limiter.cpp  test_limiter_algorithm.cpp  test_limiter_engine.cpp  test_limiter_engine_modes.cpp  test_lockfree_fifo.cpp  test_loudness_meter.cpp  test_loudness_meter_accuracy.cpp  test_oversampler.cpp  test_sidechain_filter.cpp  test_transient_limiter.cpp  test_true_peak.cpp
M-LIM/tests/integration/: test_dsp_components.cpp  test_parameter_state.cpp  test_plugin_processor.cpp  test_processor_stress.cpp  test_realtime_safety.cpp  test_state_cross_component.cpp
M-LIM/tests/state/: state_test_helpers.h  test_ab_state.cpp  test_preset_manager.cpp  test_preset_manager_errors.cpp  test_undo_manager.cpp
Scripts/: capture-screenshot.sh  ui-test-helper.sh  visual-parity-auditor.sh
screenshots/: audit-sweep37-rmse-results.txt  sweep19-rmse-baseline.txt  task-238-results.txt  task-245-rmse-results.txt  task-264-rmse-results.txt  task-268-rmse-results.txt  task-281-rmse-results.txt  task-288-rmse-results.txt  task-299-rmse-results.txt  task-317-rmse-results.txt  task-321-rmse-results.txt  task-324-rmse-results.txt  task-333-rmse-results.txt  (+34 more)
(+924 files in other folders)
